<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">可可电视</string>
    <string name="go">go</string>
    <string name="nulltime">--:--:--</string>
    <string name="loading_txt">正在加载中...</string>

    <string name="version_name">1.0</string>
    <string name="title_file">本地视频</string>
    <string name="title_online">在线视频</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="loadinfo">载入中，请稍后...</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="prompt">退出确认</string>
    <string name="quit_desc">确认退出程序？</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="user_def">自定义视频</string>
    <string name="user_def_note">请输入网络MRL：\n如http://、mms://或rtsp://</string>
    <string name="user_def_hint">请输入网络地址...</string>
    <string name="user_def_open">打开</string>
    <string name="user_def_clear">清除</string>
    <string name="example1">例如：\n\nhttp://devimages.apple.com/iphone/samples/bipbop/gear1/prog_index.m3u8</string>
    <string name="example2">mms://live.cri.cn/pop</string>
    <string name="example3">rtsp://av1.jiaodong.net/tv1</string>
    <string name="codec_str">[硬解码]\n利用您手机操作系统的接口进行解码，有利于提升性能；但是，兼容性不够，有些视频源会无法播放。\n\n[软解码]\n采用第三方的代码库，兼容性很好，但是在某些CPU能力不强的手机上，可能会影响性能，影响用户体验。\n\n[建议]\n我们推荐您根据您手机的实际情况，在设置中动态切换!</string>
    <string name="msg_str">[搜狐视频]\n首选！高清、流畅，但每晚黄金时段，某些卫视台可能有版权问题，暂时不能观看\n\n[乐视网]\n高清，但某些台源可能会有卡顿\n\n[腾讯视频]\n高清\n\n[CNTV]\n高清、标清，央视网络专有频道\n\n[PPTV]\n高清、标清</string>
    <string name="version_note">版本：可可电视v1.2.0\n作者：可可工作室\n企鹅：1956733072\n鹅群：336809417\n联系：keke_player@163.com\n许可：FFmpeg &amp; VLC</string>
    <string name="appList_btn">应用推荐</string>

</resources>