<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item_selected" >

        <LinearLayout
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="5dp"
                android:background="@drawable/sel_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/user_def"
                android:textColor="#ff4b4949"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_toLeftOf="@id/t1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/sel_home" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/user_def_note"
        android:textColor="#ff4b4949"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/test_uri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_def_hint" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/test_play"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_def_open" />

        <Button
            android:id="@+id/clear_play"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/test_play"
            android:text="@string/user_def_clear" />
    </RelativeLayout>

    <TextView
        android:id="@+id/example1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/example1"
        android:textColor="#ff4b4949"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/example2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/example2"
        android:textColor="#ff4b4949"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/example3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/example3"
        android:textColor="#ff4b4949"
        android:textSize="15sp" />

</LinearLayout>